--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 </head>
 <body>
     <h3>A basic arithmetic calculator using Javascript.</h3>
-    <script src="index.js"></script>
+    <script src="arit.js"></script>
 </body>
 </html>
